<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming_event"
        android:name="ui.upcoming_event.UpcomingEventFragment"
        android:label="@string/title_upcoming_event"
        tools:layout="@layout/fragment_upcoming_event" />

    <fragment
        android:id="@+id/navigation_finished_event"
        android:name="ui.finished_event.FinishedEventFragment"
        android:label="@string/title_finished_event"
        tools:layout="@layout/fragment_finished_event" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/navigation_favorite_event"
        android:name="ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite_event"
        tools:layout="@layout/fragment_favorite" />

</navigation>